# sannifa

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  config_template.sh
benchmark/: CMakeLists.txt  PropagateBenchmark.hpp  Timer.hpp  bench_ffnn.cpp  bench_qpoly.cpp  bench_qtempl.cpp  bench_torch.cpp  benchplot.py
include/sannifa/: ANNFunctionInterface.hpp  ANNInterface.hpp  FFNNetwork.hpp  PyTorchWrapper.hpp  QPolyNetwork.hpp  QPolyWrapper.hpp  QTemplWrapper.hpp  Sannifa.hpp  TorchNetwork.hpp
src/: ANNFunctionInterface.cpp  ANNInterface.cpp  CMakeLists.txt  FFNNetwork.cpp  PyTorchWrapper.cpp  QPolyNetwork.cpp  QPolyWrapper.cpp  Sannifa.cpp  TorchNetwork.cpp
test/: CMakeLists.txt  PropagateBenchmark.hpp  checkDerivatives.hpp  ffnntest.cpp  testMemleak.cpp  testMemleak2.cpp  test_ffnn.cpp  test_qpoly.cpp  test_qtempl.cpp  test_torch.cpp  torchtest.cpp
